fix color and spacing for expert advice section

--- a/src/assets/custom/css/_sass/_custom-colors.scss
+++ b/src/assets/custom/css/_sass/_custom-colors.scss
@@ -19,7 +19,6 @@ $codurance-aubergine-high: tint($codurance-aubergine, 25%);
 $codurance-aubergine-mid: tint($codurance-aubergine, 50%);
 $codurance-aubergine-low: tint($codurance-aubergine, 75%);
 $codurance-green: #185466;
-$codurance-green-dark-high: mix(black, $codurance-green, 25%);
 $codurance-green-high: tint($codurance-green, 25%);
 $codurance-green-mid: tint($codurance-green, 50%);
 $codurance-green-low: tint($codurance-green, 75%);
